- MFH: Fixed bug #46268 (DateTime::modify() does not reset relative time   values).